plugins {
    id 'org.jetbrains.kotlin.jvm' version '1.4.10'
}

group 'org.example'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'org.jetbrains.kotlin.jvm'

sourceCompatibility = 15

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

repositories {
    mavenCentral()
//    jcenter()
}

dependencies {
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.0'
    implementation 'org.jetbrains.kotlin:kotlin-stdlib'
    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.0'
}

test {
    useJUnitPlatform()
}

